@@ -1,7 +1,7 @@
 <html>
 <script>
-    // Note that port "0" is tested by the initial load.
-    var blockedPorts = new Array(1, 7, 9, 11, 13, 15, 17, 19, 20,
+    // Note that port "1" is tested by the initial load.
+    var blockedPorts = new Array(7, 9, 11, 13, 15, 17, 19, 20,
       21, 22, 23, 25, 37, 42, 43, 53, 77, 79, 87, 95, 101, 102,
       103, 104, 109, 110, 111, 113, 115, 117, 119, 123, 135, 139,
       143, 179, 389, 465, 512, 513, 514, 515, 526, 530, 531, 532,
@@ -62,6 +62,6 @@
 correct error for them - blocked instead of cannot find.  It also tries the FTP ports for exemptions.  Due to the 
 nature of this test, the results can only be processed automatically via DumpRenderTree
 </p>
-<img id="testIMG" src="http://255.255.255.255:0/test.jpg" onError="nextTest();"></img>
+<img id="testIMG" src="http://255.255.255.255:1/test.jpg" onError="nextTest();"></img>
 </body>
 </html>
