@@ -580,8 +580,9 @@ unsigned short KURL::port() const
         return 0;
 
     const UChar* stringData = m_string.characters();
-    unsigned number = charactersToUIntStrict(stringData + m_hostEnd + 1, m_portEnd - m_hostEnd - 1);
-    if (!number || number > maximumValidPortNumber)
+    bool ok = false;
+    unsigned number = charactersToUIntStrict(stringData + m_hostEnd + 1, m_portEnd - m_hostEnd - 1, &ok);
+    if (!ok || number > maximumValidPortNumber)
         return invalidPortNumber;
     return number;
 }
